--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name = TicTacToe
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.MySQL5Dialect
-spring.datasource.url=jdbc:mysql://localhost:3306/re
+spring.datasource.url=jdbc:mysql://localhost:3306/tic_tac_toe
 spring.datasource.username=root
 spring.datasource.password=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
