--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,17 @@
+#spring.application.name = TicTacToe
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/tic_tac_toe
+#spring.datasource.username=root
+#spring.datasource.password=mysql
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql=true
+#server.port=8080
+
 spring.application.name = TicTacToe
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/tic_tac_toe
-spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.url=jdbc:mysql://database-2.cdcymup5vgpw.us-east-1.rds.amazonaws.com:3307/tic_tac_toe?createDatabaseIfNotExist=true
+spring.datasource.username=admin
+spring.datasource.password=Ramesh12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 server.port=8080
