change my database to another server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@
 
 spring.application.name = TicTacToe
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://database-2.cdcymup5vgpw.us-east-1.rds.amazonaws.com:3307/tic_tac_toe?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://database-1.czdv3neotjmb.us-east-1.rds.amazonaws.com:3306/tic_tac_toe?createDatabaseIfNotExist=true
 spring.datasource.username=admin
 spring.datasource.password=Ramesh12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
