--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@
 spring.application.name = TicTacToe
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://database-1.czdv3neotjmb.us-east-1.rds.amazonaws.com:3306/tic_tac_toe?createDatabaseIfNotExist=true
-spring.datasource.username=admin
+spring.datasource.username=root
 spring.datasource.password=Ramesh12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
